@@ -5,19 +5,21 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 import java.util.Map;
-
 
 public class KeycloakRealmRoleConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
 
     @Override
     public Collection<GrantedAuthority> convert(Jwt jwt) {
-        Map<String, Object> realmAccess = (Map<String, Object>) jwt.getClaims().get("realm_access");
+        Object realmAccessObj = jwt.getClaims().get("realm_access");
 
-        if (realmAccess == null) {
-            return List.of();
+        if (!(realmAccessObj instanceof Map)) {
+            return Collections.emptyList();
         }
+
+        @SuppressWarnings("unchecked")
+        Map<String, Object> realmAccess = (Map<String, Object>) realmAccessObj;
 
         return RoleConverter.convertRealmRoles(realmAccess);
     }
